broken layout fix on filter menu

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2713,9 +2713,9 @@ body.modal-open {
 }
 
 #filter-menu {
-  h3 {
-    margin-top: 0;
-  }
+  // h3 {
+  //   margin-top: 0;
+  // }
 
   .side-nav__header {
     height: auto;
